<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/UpLoad"
        android:layout_width="77dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|center_horizontal"
        android:clickable="true"
        android:onClick="upload"
        app:fabSize="mini"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@drawable/ic_arrow_upward_white_48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.90"></FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/tab_bg"
            android:backgroundTint="@color/colorPrimary">


            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/main_image"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_language_white_24dp" />

                    <TextView
                        android:id="@+id/main_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_main"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/category_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/category_image"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_assessment_white_24dp" />

                    <TextView
                        android:id="@+id/category_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_category"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/upload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"></LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cart_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:id="@+id/cart_image"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_shopping_cart_white_24dp" />

                    <TextView
                        android:id="@+id/cart_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_cart"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/setting_image"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_assignment_ind_white_24dp" />

                    <TextView
                        android:id="@+id/setting_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_profile"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>